--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>web page</title>
+<head>
+  <title>web page</title>
 <body>
-hello word
+hello word, hello again
 </body>
 </head>
 </html>
